--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btnWebToIOS">web -> iOS</button>
+    <button id="btnWebToIOS_01">web -> iOS : string data</button>
+    <button id="btnWebToIOS_02">web -> iOS : array data</button>
+    <button id="btnWebToIOS_03">web -> iOS : dictionary data</button>
     <script>
-        var btnWebToIOS = document.getElementById("btnWebToIOS")
-        btnWebToIOS.addEventListener("click", function() {
-            window.webkit.messageHandlers.callback.postMessage("Call iOS from web.")
-        })
+        var btnWebToIOS01 = document.getElementById("btnWebToIOS_01")
+        btnWebToIOS01.addEventListener("click", function() {
+            window.webkit.messageHandlers.callback.postMessage("Call iOS from web.");
+        });
+        var btnWebToIOS02 = document.getElementById("btnWebToIOS_02")
+        btnWebToIOS02.addEventListener("click", function() {
+            window.webkit.messageHandlers.callback.postMessage([1, 2, "a"]);
+        });
+        var btnWebToIOS03 = document.getElementById("btnWebToIOS_03")
+        btnWebToIOS03.addEventListener("click", function() {
+            window.webkit.messageHandlers.callback.postMessage({a: 1, b: 2, c: "a"});
+        });
 
         function jsFunc() {
             console.log("Call js from iOS");
